@@ -321,6 +321,7 @@ CREATE TABLE IF NOT EXISTS `fc_job` (
   `dict_deployment_mode` tinyint(3) NOT NULL DEFAULT '0',
   `optimized` tinyint(1) NOT NULL DEFAULT '1',
   `device_types` int(10) unsigned NOT NULL DEFAULT '1',
+  `workload_profile` tinyint(3) NOT NULL DEFAULT '2',
   `deleted` tinyint(1) NOT NULL DEFAULT '0',
   `kill` int(11) NOT NULL DEFAULT '0',
   `batch_id` int(11),
