@@ -6,3 +6,6 @@ ADD`remaining_time` bigint(20) unsigned NOT NULL DEFAULT '0';
 
 ALTER TABLE `fc_job`
 ADD `device_types` int(10) unsigned NOT NULL DEFAULT '1';
+
+ALTER TABLE `fc_job`
+ADD `workload_profile` tinyint(3) NOT NULL DEFAULT '2';
