@@ -60,10 +60,12 @@ bool CAttackCombinator::makeWorkunit()
         return false;
     }
 
-    f << generateBasicConfig(m_job->getAttackMode(), m_job->getAttackSubmode(), m_job->getDistributionMode(),
-                             m_job->getName(), m_job->getHashType(), 0,
-                             m_job->getHWTempAbort(), m_job->getOptimizedFlag(), m_job->getDeviceTypes(),
-                             m_job->getRuleLeft(), m_job->getRuleRight());
+    f << generateBasicConfig(m_job->getAttackMode(), m_job->getAttackSubmode(),
+                             m_job->getDistributionMode(), m_job->getName(),
+                             m_job->getHashType(), 0, m_job->getHWTempAbort(),
+                             m_job->getOptimizedFlag(), m_job->getDeviceTypes(),
+                             m_job->getWorkloadProfile(), m_job->getRuleLeft(),
+                             m_job->getRuleRight());
 
     /** Load current workunit dictionary */
     PtrDictionary workunitDict = GetWorkunitDict();
