@@ -130,10 +130,11 @@ bool CAttackPcfgRules::makeWorkunit()
         return false;
     }
 
-    f << generateBasicConfig(m_job->getAttackMode(), m_job->getAttackSubmode(), m_job->getDistributionMode(),
-                             m_job->getName(), m_job->getHashType(), 0,
-                             m_job->getHWTempAbort(),
-                             m_job->getOptimizedFlag(), m_job->getDeviceTypes());
+    f << generateBasicConfig(m_job->getAttackMode(), m_job->getAttackSubmode(),
+                             m_job->getDistributionMode(), m_job->getName(),
+                             m_job->getHashType(), 0, m_job->getHWTempAbort(),
+                             m_job->getOptimizedFlag(), m_job->getDeviceTypes(),
+                             m_job->getWorkloadProfile());
 
     /** Output hc_keyspace */
     auto limitLine = makeLimitingConfigLine("hc_keyspace", "BigUInt", std::to_string(newKeyspace));
