@@ -67,9 +67,11 @@ bool CAttackPrince::makeWorkunit()
 
     /** Output original config from DB */
     configFile << generateBasicConfig(
-        m_job->getAttackMode(), m_job->getAttackSubmode(), m_job->getDistributionMode(), m_job->getName(),
-        m_job->getHashType(), m_job->getRandomRulesCount(),
-        m_job->getHWTempAbort(), m_job->getOptimizedFlag());
+        m_job->getAttackMode(), m_job->getAttackSubmode(),
+        m_job->getDistributionMode(), m_job->getName(), m_job->getHashType(),
+        m_job->getRandomRulesCount(), m_job->getHWTempAbort(),
+        m_job->getOptimizedFlag(), m_job->getDeviceTypes(),
+        m_job->getWorkloadProfile());
 
     /** Output mode */
     uint64_t startIndex = m_workunit->getStartIndex();
