@@ -73,7 +73,7 @@ bool CAttackRules::makeWorkunit() {
         m_job->getAttackMode(), m_job->getAttackSubmode(),
         m_job->getDistributionMode(), m_job->getName(), m_job->getHashType(), 0,
         m_job->getHWTempAbort(), m_job->getOptimizedFlag(),
-        m_job->getDeviceTypes());
+        m_job->getDeviceTypes(), m_job->getWorkloadProfile());
 
     if (m_job->getDistributionMode() == 0) {
       // Number of passwords in the sent dictionary (the dictionary fragment).
