@@ -6,6 +6,7 @@ New features:
 * New column 'Remaining time' in the job workunits view.
 * It is now possible to upgrade standard (non-dockerized) Fitcrack to newer versions. Please see UPGRADE.md file.
 * Added possibility to select device types (CPU or GPU) to be used for cracking.
+* Added possibility to change hashcat's workload profile.
 
 Fixes:
 * ...
